# pyProxyClass

./: README.md
code/: pyproject.toml
code/pyproxyclass/: __init__.py  proxy_class.py
code/tests/unit/: test_proxy_class.py
