[tool.poetry]
name = "pyproxyclass"
version = "0.1.0"
description = "Generic Proxy Class for python classes"
authors = ["Carlos Espinaco <spi101@gmail.com>"]
license = "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
