[tool.poetry]
name = "pyproxyclass"
version = "0.1.0"
description = "Generic Proxy Class for python classes"
authors = ["Carlos Espinaco <spi101@gmail.com>"]
license = "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
readme = "README.md"
include = ["pyproxyclass"]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.8.0"
ruff = "^0.1.9"
pylint = "^3.0.3"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
